# lantern-sequence

./: .gitignore  ANONYMITY_STATEMENT.md  README.md  VERIFICATION_GUIDE.md  requirements.txt  setup.sh
crypto_backend/: Cargo.toml  README.md  build.sh  pyproject.toml
crypto_backend/src/: lib.rs  lib_simple.rs.bak  metrics.rs  python_bindings.rs  range_proof.rs  utils.rs  zk_exp_lib.rs
experiments/: README.md  detection_rate.py  lenet5_mnist.py  lenet5_mnist_demo.py  resnet18_cifar10.py  run_all_experiments.py  scalability.py
matrix-prover/: Cargo.toml  README.md  comparison_table.tex  zk_matrix_benchmark.csv  zk_vs_nonzk_comparison.csv
matrix-prover-python/: Cargo.toml  pyproject.toml
matrix-prover-python/python/matrix_prover_rust/: __init__.py
matrix-prover-python/src/: lib.rs
matrix-prover/examples/: modular_usage.rs  pairing_bench.rs  verify_bench.rs
matrix-prover/src/: asvc.rs  benchmark.rs  kzg.rs  lib.rs  main.rs  zk_matrix.rs
matrix-prover/tests/: integration_proof_verify.rs
range-prover/: Cargo.toml  README.md  comprehensive_sliding_window_results.csv  test_modularity.rs
range-prover-python/: Cargo.toml  pyproject.toml
range-prover-python/python/range_prover_rust/: __init__.py
range-prover-python/src/: lib.rs
range-prover/examples/: range_proof_demo.rs
range-prover/src/: backing_test.rs  lib.rs  main.rs  range_proof.rs  single_exp_analysis.rs  zk_exp_lib.rs
src/: __init__.py  challenge.py  crypto_backend.py  dataset_commitment.py  riv_protocol.py  sic_commitments.py  subset_proof.py  verification.py
tests/: test_zk_mode.py
