[package]
name = "zkMaP"
version = "0.1.0"
description = "Zero-Knowledge Proofs for Matrix Multiplication"
edition = "2021"

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
rand = "0.8.5"
rayon = "1.8.0"
sha2 = "0.10.7"
once_cell = "1.18"
num_cpus = "1.16.0"
csv = "1.2.2"
chrono = "0.4.26"
ark-serialize = "0.4.2"
plotters = "0.3.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false
codegen-units = 1
panic = "abort"