[package]
name = "range-prover-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "range_prover_rust"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Numpy for array handling
numpy = "0.20"

# Our exponentiation/range prover library (local dependency)
range_prover_lib = { path = "../range-prover", package = "range-prover-lib" }

# Re-export necessary types
ark-ff = "0.4.0"
ark-bls12-381 = "0.4.0"

[profile.release]
opt-level = 3
lto = "thin"
